--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.5.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.16.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
